# fiware-cosmos-platform

./: .gitignore  CHANGELOG  CMakeLists.txt  COPYRIGHT  CPackConfigRPM.cmake  ContributionPolicy.txt  INSTALL  LICENSE  README  README.rst  Vagrantfile  build.py  build.sbt  buildout.py  deploy.sh  deploy.stag.cfg  license.txt  makefile  metrics.xml  pom.xml  runtests.py
apps/: CMakeLists.txt
apps/arcanumConsumer/: CMakeLists.txt  Makefile  README.md  arcanum.cpp  arcanumConsumer.cpp  arcanumTestServer.c  arcanumTunnel.c  mk  sniffer.c  tektronix.cpp  tektronixTunnel.c
apps/aux/: CMakeLists.txt
apps/delilah/: CMakeLists.txt  Delilah.cpp  Delilah.h  delilah.cpp  main_Delilah.cpp  main_client.cpp
apps/delilah.old/: main_Delilah.cpp
apps/delilah2/: main_Delilah.cpp
apps/delilahQt/: #DelilahConnection.h#  CMakeLists.txt  DelilahConnection.cpp  DelilahConnection.h  DelilahQt.cpp  DelilahQtApp.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  Makefile  Plot.cpp  Plot.h  PlotWidget.cpp~  PlotWidget.h  PlotWidget.h~  ProcessScene.cpp  ProcessScene.h  ProcessView.cpp  ProcessView.h  QueueItem.cpp  QueueItem.h  QueueWidget.cpp  QueueWidget.h  SamsonConnect.cpp  SamsonConnect.h  SamsonConnect.ui  SamsonNodeWidget.cpp  SamsonNodeWidget.h  SamsonQueryWidget.cpp  SamsonQueryWidget.h  SamsonQueryWidget.ui  StreamOperationWidget.cpp  StreamOperationWidget.h  UpdateElements.cpp  UpdateElements.h  WorkerDataController.cpp  WorkerDataController.h  WorkspaceScene.h  WorkspaceView.cpp  globals.h  (+2 more)
apps/delilah_graph/: CMakeLists.txt  main_delilah_graph.cpp
apps/extra/: CMakeLists.txt
apps/logServer/: CMakeLists.txt  main_logCat.cpp  main_logClient.cpp  main_logServer.cpp
apps/networkTest/: CMakeLists.txt  networkTest.cpp
apps/ngsi/: Attribute.cpp  Attribute.h  CMakeLists.txt  ContextRegistrationAttribute.h  ContextRegistrationAttributeList.h  Entity.cpp  Entity.h  Format.h  Makefile  Metadata.cpp  Metadata.h  Peer.h  RegisterContextRequest.h  Registration.cpp  Registration.h  Scope.h  Verb.h  curl01  curl02  curl03  curlDiscover01  curlRegFirst  curlRegSecond  curlRegisterFirst  curlRegisterFirst2  curlRegisterSecond  curlTest  database.cpp  database.h  discoverContextAvailability.cpp  discoverContextAvailability.h  discoverContextAvailabilityRequest.xml  discoverContextAvailabilityResponse.xml  duration.cpp  duration.h  globals.h  httpData.cpp  httpData.h  logRequest.cpp  main_ngsi.cpp  (+11 more)
apps/old_delilaQt/: CMakeLists.txt  Plot.cpp  QueueWidget.cpp  SamsonConnect.h  SamsonConnect.ui  SamsonQueryWidget.cpp  UpdateElements.cpp  WorkerDataController.cpp  main_DelilahQT.cpp  main_DelilahQT.h
apps/passiveLocationPush/: CMakeLists.txt  main_passiveLocationPush.cpp
apps/samson/: CMakeLists.txt  main.cpp
apps/samsonCat/: CMakeLists.txt  main_SamsonCat.cpp
apps/samsonCheck/: CMakeLists.txt  main_SamsonCheck.cpp
apps/samsonClient/: CMakeLists.txt  main_client.cpp
apps/samsonConfig/: CMakeLists.txt  main_SamsonConfig.cpp
apps/samsonConnector/: Adaptor.cpp  Adaptor.h  Block.h  BufferList.h  BufferProcessor.cpp  BufferProcessor.h  CMakeLists.txt  Channel.cpp  Channel.h  ChannelAdaptor.cpp  ChannelAdaptor.h  Connection.cpp  Connection.h  ConnectorCommand.h  DiskAdaptor.cpp  DiskAdaptor.h  DiskConnection.cpp  DiskConnection.h  DiskItem.cpp  DiskItem.h  FileDescriptorConnection.cpp  FileDescriptorConnection.h  InterChannelItem.cpp  InterChannelItem.h  Item.cpp  Item.h  ListenerAdaptor.cpp  ListenerAdaptor.h  ListenerItem.cpp  ListenerItem.h  LogManager.h  SamsonAdaptor.cpp  SamsonAdaptor.h  SamsonConnection.cpp  SamsonConnection.h  SamsonConnector.cpp  SamsonConnector.h  SamsonConnectorConnection.cpp  SamsonConnectorConnection.h  SamsonConnectorListener.cpp  (+17 more)
apps/samsonController/: CMakeLists.txt  SamsonController.cpp  SamsonController.h  main_samsonController.cpp  traceLevels.h
apps/samsonController.old/: CMakeLists.txt
apps/samsonController2/: main_samsonController.cpp
apps/samsonData/: CMakeLists.txt  main_samsonData.cpp
apps/samsonDemo/: CMakeLists.txt  FakeEndpoint.h  NetworkFake.cpp  NetworkFake.h  NetworkFakeCenter.h  main_SamsonDemo.cpp  traceLevels.h
apps/samsonDiskTest/: CMakeLists.txt  main_samsonDiskTest.cpp
apps/samsonKiller/: CMakeLists.txt  main_samsonKiller.cpp
apps/samsonLevelMonitor/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Plot.cpp  Plot.h  common.h  main_samsonLevelMonitor.cpp
apps/samsonLocal/: CMakeLists.txt  FakeEndpoint.h  NetworkCenter.cpp  NetworkCenter.h  NetworkFake.cpp  NetworkFake.h  NetworkFakeCenter.h  main_samsonLocal.cpp
apps/samsonLogServer/: CMakeLists.txt  LogProvider.cpp  LogProvider.h  Popup.cpp  Popup.h  SamsonLogServer.cpp  SamsonLogServer.h  globals.h  logProviderList.cpp  logProviderList.h  main_samsonLogServer.cpp  traceLevels.h
apps/samsonMemCheck/: CMakeLists.txt  main_SamsonMemCheck.cpp
apps/samsonMemoryTest/: CMakeLists.txt  main_samsonMemoryTest.cpp
apps/samsonModuleCat/: CMakeLists.txt  main_samsonModuleCat.cpp
apps/samsonModuleParser/: AUTockenizer.cpp  AUTockenizer.h  CMakeLists.txt  DataContainer.cpp  DataContainer.h  DataCreator.cpp  DataCreator.h  DataType.cpp  DataType.h  ModuleContainer.cpp  ModuleContainer.h  OperationContainer.cpp  (+6 more)
libs/: CMakeLists.txt
modules/: CMakeLists.txt  makefile  sna.old_SAMSON.tar
samson/: .gitignore  CHANGELOG  CMakeLists.txt  COPYRIGHT  INSTALL  README.rst  makefile
scripts/: CMakeLists.txt  DartConfiguration.tcl  build  buildRelease  buildenv.sh  comTest  install_samson  lib_shared_memory.scr  postInstall  prepareBuild  prepareEclipse  samson  samsonAutomaticTest  samsonDeb  samsonDebDev  samsonDebDocs  samsonDelilahTest  samsonDist  samsonDistribute  samsonInitSetup  samsonModuleDeb  samsonModuleDebDev  samsonModuleDependencies  samsonModuleDist  samsonModuleGenerator  samsonModuleRpm  samsonPrepareServer  samsonProcessesSupervise  samsonRpm  samsonTest  samsonTestDistributer  test_aux_functions  test_complete  test_local_processes  test_processes  uninstall_samson  valgrindParse
test/: CMakeLists.txt
testing/: CMakeLists.txt  test_complete_commands.txt
(+11557 files in other folders)
