ADD_SUBDIRECTORY(logMsg)
ADD_SUBDIRECTORY(parseArgs)
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(memory)
ADD_SUBDIRECTORY(disk)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(process)
ADD_SUBDIRECTORY(module)
ADD_SUBDIRECTORY(coding)
ADD_SUBDIRECTORY(data)
ADD_SUBDIRECTORY(core)
ADD_SUBDIRECTORY(controller)
ADD_SUBDIRECTORY(worker)
ADD_SUBDIRECTORY(delilah)
