# Independent libraries
ADD_SUBDIRECTORY(logMsg)
ADD_SUBDIRECTORY(parseArgs)
ADD_SUBDIRECTORY(ui)
ADD_SUBDIRECTORY(au)
ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(data)

# SAMSON Common libraries
ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(network)
ADD_SUBDIRECTORY(module)

ADD_SUBDIRECTORY(samson)


# SAMSON Components
ADD_SUBDIRECTORY(controller)
ADD_SUBDIRECTORY(worker)
ADD_SUBDIRECTORY(delilah)
