ADD_SUBDIRECTORY(system)
ADD_SUBDIRECTORY(example)
ADD_SUBDIRECTORY(cdr)
ADD_SUBDIRECTORY(gg)
ADD_SUBDIRECTORY(graph)
ADD_SUBDIRECTORY(hit)
ADD_SUBDIRECTORY(level)
ADD_SUBDIRECTORY(mob)
ADD_SUBDIRECTORY(mob2)
ADD_SUBDIRECTORY(mobility)
ADD_SUBDIRECTORY(osn)
ADD_SUBDIRECTORY(page_rank)
ADD_SUBDIRECTORY(passive_location)
ADD_SUBDIRECTORY(prime)
ADD_SUBDIRECTORY(shop)
ADD_SUBDIRECTORY(simple_mobility)
ADD_SUBDIRECTORY(sna)
ADD_SUBDIRECTORY(snalight)
ADD_SUBDIRECTORY(sort)
ADD_SUBDIRECTORY(terasort)
ADD_SUBDIRECTORY(testcomparefunctions)
#ADD_SUBDIRECTORY(testSetFromString)
ADD_SUBDIRECTORY(testtime)
ADD_SUBDIRECTORY(tienda)
ADD_SUBDIRECTORY(twitter)
ADD_SUBDIRECTORY(txt)
ADD_SUBDIRECTORY(txt_md)
ADD_SUBDIRECTORY(url)
ADD_SUBDIRECTORY(urlbenchmark)
ADD_SUBDIRECTORY(web)
ADD_SUBDIRECTORY(webp)
ADD_SUBDIRECTORY(wiki)
